--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cron": "^1.1.1",
     "electron": "^1.4.0",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "nedb": "^1.8.0"
   }
 }
