--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "axa-reminder",
   "version": "1.0.0",
   "description": "A reminder app using Electron",
+  "homepage" : "https://github.com/amalbose/axa-reminder",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js"
@@ -11,7 +12,6 @@
   "dependencies": {
     "auto-launch": "^5.0.1",
     "cron": "^1.1.1",
-    "electron": "^1.4.0",
     "jquery": "^3.1.0",
     "nedb": "^1.8.0"
   }
