--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "package:win" : "electron-packager ./ axa-reminder --out=packages --platform=win32 --arch=x64 --overwrite",
-    "package:linux" : "electron-packager ./ axa-reminder --out=packages --platform=linux --arch=x64 --overwrite"
+    "package:win" : "electron-packager ./ axa-reminder --out=packages --platform=win32 --arch=x64 --overwrite --version=1.4.0",
+    "package:linux" : "electron-packager ./ axa-reminder --out=packages --platform=linux --arch=x64 --overwrite --version=1.4.0"
   },
   "author": "amalbose",
   "license": "ISC",
