--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package:win": "electron-packager ./ axa-reminder --out=packages --platform=win32 --arch=x64 --overwrite --version=1.4.0",
     "package:linux": "electron-packager ./ axa-reminder --out=packages --platform=linux --arch=x64 --overwrite --version=1.4.0"
   },
-  "author": "amalbose",
+  "author": "amalbose <axatrikx@gmail.com> (http://axatrikx.com)",
   "license": "ISC",
   "dependencies": {
     "auto-launch": "^5.0.1",
